--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <main>
         <article>
             <ul>
-                <li><a href="https://github.com/ronaldfb"><img src="imagens/icone-github.png" alt="">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/ronald-ferraz-de-barros-26082b282/"><img src="imagens/icone-linkedin.png" alt="">LinkedIn</a></li>
+                <li><a href="https://github.com/ronaldfb" target="_blank"><img src="imagens/icone-github.png" alt="Link GitHub">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/ronald-ferraz-de-barros-26082b282/" target="_blank"><img src="imagens/icone-linkedin.png" alt="">LinkedIn</a></li>
                 <li><a href="#">Opção 3</a></li>
                 <li><a href="#">Opção 4</a></li>
                 <li><a href="#">Opção 5</a></li>
