--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     </header>
     <main>
         <article>
+            
+            <div class="container">
+                <img src="imagens/perfil-teste-100.png" alt="Foto de perfil" class="img-centralizada">
+            </div>
+
+            <h2>Ronald Ferraz de Barros</h2>
+
+            <p>&#x2709 ronaldferrazb@gmail.com</p>
             <ul>
                 <li><a href="https://github.com/ronaldfb" target="_blank"><img src="imagens/icone-github.png" alt="Link GitHub">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/ronald-ferraz-de-barros-26082b282/" target="_blank"><img src="imagens/icone-linkedin.png" alt="">LinkedIn</a></li>
