--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
             <h2>Ronald Ferraz de Barros</h2>
 
-            <p>&#x2709 ronaldferrazb@gmail.com</p>
-            <ul>
-                <li><a href="https://github.com/ronaldfb" target="_blank"><img src="imagens/icone-github.png" alt="Link GitHub">GitHub</a></li>
+            <p>&#x1F4E9 ronaldferrazb@gmail.com</p>
+            <ul class="oi">
+                <li><a href="https://github.com/ronaldfb" target="_blank"><img src="imagens/icone-github.png" alt="Logo GitHub">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/ronald-ferraz-de-barros-26082b282/" target="_blank"><img src="imagens/icone-linkedin.png" alt="">LinkedIn</a></li>
-                <li><a href="#">Opção 3</a></li>
+                <li><a href="#" target="_blank"><img class="c" src="imagens/whatsapp_20.png" alt="Logo Whatsapp">Whatsapp</a></li>
                 <li><a href="#">Opção 4</a></li>
                 <li><a href="#">Opção 5</a></li>
             </ul>
