--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Links</title>
+    <link rel="shortcut icon" href="imagens/link.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/pc.css">
 
@@ -26,7 +27,7 @@
             <ul class="oi">
                 <li><a href="https://github.com/ronaldfb" target="_blank"><img src="imagens/icone-github.png" alt="Logo GitHub">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/ronald-ferraz-de-barros-26082b282/" target="_blank"><img src="imagens/icone-linkedin.png" alt="">LinkedIn</a></li>
-                <li><a href="#" target="_blank"><img class="c" src="imagens/whatsapp_20.png" alt="Logo Whatsapp">Whatsapp</a></li>
+                <li><a href="https://wa.link/afsvho" target="_blank"><img class="c" src="imagens/whatsapp_20.png" alt="Logo Whatsapp">Whatsapp</a></li>
                 <li><a href="#">Opção 4</a></li>
                 <li><a href="#">Opção 5</a></li>
             </ul>
