--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <article>
             
             <div class="img-container">
-                <img src="imagens/perfil-teste-100.png" alt="Foto de perfil" class="img-centralizada">
+                <img src="imagens/perfil-150.png" alt="Foto de perfil" class="img-centralizada">
             </div>
 
             <h2>Ronald Ferraz de Barros</h2>
