--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="https://github.com/ronaldfb" target="_blank">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/ronald-ferraz-de-barros-26082b282/" target="_blank">LinkedIn</a></li>
                     <li><a href="https://www.instagram.com/rxnaldzzz/" target="_blank">Instagram</a></li>
-                    <li><a href="#" target="_blank">Opção 4</a></li>
-                    <!-- <li><a href="#">Opção 5</a></li> -->
+                    <!-- <li><a href="#" target="_blank">Opção 4</a></li> -->
+                    <!-- <li><a href="#" target+"_blank">Opção 5</a></li> -->
                 </ul>
             </p>
             
