--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Links</title>
-    <link rel="shortcut icon" href="imagens/link.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/link (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/pc.css">
 
