--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
         <article>
             
-            <div class="img-container">
-                <img src="imagens/perfil125.png" alt="Foto de perfil" class="img-centralizada">
+            <div>
+                <img src="imagens/perfil125.png" alt="Foto de perfil" >
             </div>
 
             <h2>Ronald Ferraz de Barros</h2>
